tables other case study, outline for outlook

--- a/literatur.bib
+++ b/literatur.bib
@@ -28,6 +28,15 @@
   doi =		{http://dx.doi.org/10.4230/OASIcs.GCB.2012.108},
   annote =	{Keywords: protein structure, graph theory, ligand, secondary structure, protein ligang graph}
 
+@inproceedings{sherv_graphlets,
+  title={Efficient graphlet kernels for large graph comparison},
+  author={Shervashidze, Nino and Petri, Tobias and Mehlhorn, Kurt and Borgwardt, Karsten M and Vishwanathan, Svn},
+  booktitle={International conference on artificial intelligence and statistics},
+  pages={488--495},
+  year={2009}
+}  
+  
+  
 @article{new_ptgl,
                author = {Tim Sch{\"a}fer, Andreas Scheck, Daniel Brune{\"s}, Patrick May and Ina Koch},
                title = "the new protein topology graph library web server",
