--- a/arbeit.tex
+++ b/arbeit.tex
@@ -9,6 +9,7 @@
 \usepackage{rotating}
 \usepackage[table, dvipsnames, usenames]{xcolor}
 \usepackage{color}
+\usepackage[justification=centering]{caption}
 %\usepackage{algorithm2e}
 %\usepackage{qtree}
 %\usepackage{cite}
@@ -32,8 +33,14 @@
 \section{Motivation}
 
 TODO: Zitationen einf\"ugen: schwierigkeit der Analyse, bereits bekannte Methoden
+TODO: stärkerer Bezug auf und nennung von tatianas arbeit (insbesondere bio-graphlets)
+TODO: Bereits bekannte Anwendungen von Graphlets: Anwendung von Shervashidze auf ZUSAMMENHAENGENDE graphen, zeigt Probleme mit der Darstellung in der PTGL - einzelne Knoten werden nur in marginaler Weise integriert.
+Anwendung von Przulj: Grosse Netzwerke . Vergleich mit zufaelligen Graphen. Vergleich zwischen PPIs mit hoher Praezision und PPIs mit niedriger praezision. betrifft ebenfalls nur vollstaendige graphen.
+datensatz von dobson und doig (in shervashidze arbeit erwaehnt) verwendet svms zur analyse - 70 prozent genauigkeit wurde erreicht. dies ist ein anzeichen daf\"ur, dass die Klassifizierung mit vektoren nur begrenzt genutzt werden kann. (shervashidze ergebnis ist auch nicht viel besser)
+es ist zu erw\"ahnen, dass SVMs zu den fortgeschrittensten Klassifizierungsmethoden geh\"oren, die zur zeit verwendet werden.
 
-Dei \"Ahnlickeit von Proteinen zu bestimmen ist eine gro"se Herausforderung. In der Zeit als wenige Strukturen bekannt waren wurde die strukturelle \"Ahnlichkeit von Proteinen noch von Experten visuell bewertet, aber mittlerweile befinden sich die Strukturen von \"uber 100000 biologischen Makromolek\"ulen in der PDB. Der Vergleich dieser gigantischen Anzahl von Strukturdaten erfordert effiziente Analysemethoden. Solche Analysen k\"onnen tiefe Einblicke in die ferne evolution\"are Verwandschaft von Proteinen liefern und sie helfen bei der Bestimmung der Funktion eines Proteins. Sie sind im Bereich des \textit{Drug-Design} hoch interessant, denn  Strukturdaten liefer Informationen \"uber m \"ogliche Liganden, die ein Protein binden kann und damit auch \"uber m\"ogliche Ziele von Medikamenten bei der Bek\"ampfung von Krankheiten. Deshalb sind strukturbasierte \"Ahnlichkeitsanalysen in der pharmakologischen Forschung von zentraler Bedeutung.
+
+\paragraph{Die \"Ahnlickeit} von Proteinen zu bestimmen ist eine gro"se Herausforderung. In der Zeit als wenige Strukturen bekannt waren wurde die strukturelle \"Ahnlichkeit von Proteinen noch von Experten visuell bewertet, aber mittlerweile befinden sich die Strukturen von \"uber 100000 biologischen Makromolek\"ulen in der PDB. Der Vergleich dieser gigantischen Anzahl von Strukturdaten erfordert effiziente Analysemethoden. Solche Analysen k\"onnen tiefe Einblicke in die ferne evolution\"are Verwandschaft von Proteinen liefern und sie helfen bei der Bestimmung der Funktion eines Proteins. Sie sind im Bereich des \textit{Drug-Design} hoch interessant, denn  Strukturdaten liefer Informationen \"uber m \"ogliche Liganden, die ein Protein binden kann und damit auch \"uber m\"ogliche Ziele von Medikamenten bei der Bek\"ampfung von Krankheiten. Deshalb sind strukturbasierte \"Ahnlichkeitsanalysen in der pharmakologischen Forschung von zentraler Bedeutung.
 Das Problem hierbei ist, dass die Berechnung der \"Ahnlichkeit von 3D-Strukturen algorithmisch ein schwieriges Problem darstellt; lange Berechnungszeiten sind die Regel und es ist schwierig herauszufinden, ob der gefundene \"Ahnlichkeitswert f\"ur zwei Proteine nur ein lokales Optimum darstellt.
 Deshalb wird versucht, von der 3D-Darstellung zu abstrahieren, ohne zentrale Strukturinformationen zu verlieren. \emph{Dali} \cite{dali}verwendet beispielsweise Distanzmatrizen, die die Abst\"ande einzelner Residuen zueinander speichern, anstatt die Koordinaten jedes Atoms abdsspzuspeichern.
 Der Strukturvergleich findet dann als Vergleich dieser Distanzmatrizen statt.
@@ -89,7 +96,7 @@ Um die Proteinstrukturtopologien aus der PTGL zu vergleichen wurde das Programm 
 
 
 Die \underline{P}rotein \underline{T}opology \underline{G}raph \underline{L}ibrary ist 2009 von \textit{May et al.} \cite{ptgl1} entwickelt worden. Ausgehend von der Tatsache, dass sich Proteinstrukturtopologien als r\"aunliche Beziehungen von SSEs untereinander definieren lassen, verwendet die PTGL \emph{Graphen}, um Proteinstrukturtopologien darzustellen.
-Hierbei stellen die Knoten des Graphen die SSEs eines Proteins dar. Sie werden dem jeweiligen SSE entsprechend markiert. Knoten, die $\alpha$-Helices repr\"asentieren werden mit einem H markiert, $\beta$-Faltbl\"atter mit einem E. Weiterhin erm\"oglicht die PTGL die Darstellung von Liganden, (\cite{vplg}) denen mit L markierte Knoten zugeordnet werden. Um die r\"aumliche Nachbarschaft von Sekund\"arstrukturen und Liganden untereinander darstellen zu k\"onnen werden ungerichtete Kanten zwischen Knoten gezogen wenn die entsprechenden Elemente benachbart sind. Jede Polypeptidkette eines Proteins wird dann als \emph{Proteingraph} dargestellt. Die Zusammenhangskomponenten eines Proteingraphen werden als Faltungsghttps://www.opensuse.org/raphen bezeichnet, weil sie typischerweise eine unabh\"angige Faltungseinheit darstellen.
+Hierbei stellen die Knoten des Graphen die SSEs eines Proteins dar. Sie werden dem jeweiligen SSE entsprechend markiert. Knoten, die $\alpha$-Helices repr\"asentieren werden mit einem H markiert, $\beta$-Faltbl\"atter mit einem E. Weiterhin erm\"oglicht die PTGL die Darstellung von Liganden, (\cite{vplg}) denen mit L markierte Knoten zugeordnet werden. Um die r\"aumliche Nachbarschaft von Sekund\"arstrukturen und Liganden untereinander darstellen zu k\"onnen werden ungerichtete Kanten zwischen Knoten gezogen wenn die entsprechenden Elemente benachbart sind. Jede Polypeptidkette eines Proteins wird dann als \emph{Proteingraph} dargestellt. Die Zusammenhangskomponenten eines Proteingraphen werden als Faltungsgraphen bezeichnet, weil sie typischerweise eine unabh\"angige Faltungseinheit darstellen.
 
 \paragraph{Die Berechnung dieser Graphen}
 
@@ -154,7 +161,7 @@ Hierbei k\"onnen verschiedene Worte das gleiche \textit{Graphlet} repr\"asentier
 
 Die Berechnung der \"aquivalenten \textit{Graphlet}-Worte der L\"ange 2 ist trivial. Aus dem Alphabet $\sum$ werden alle Worte $w = (\sigma_i, \sigma_j)$ berechnet, wobei Spiegelungen nicht mit ausgegeben werden, da zwei Worte $ (\sigma_j, \sigma_i) $ und $ (\sigma_j, \sigma_i) $ \"aquivalente \textit{Graphlet}-Worte sind.
 
-Die Berechnung aller \"aquivalenten \textit{Graphlet}-Worte der L\"ange 3 ist komplizierter, da sie f\"ur zwei verschiedene \textit{Graphlets} berechnet werden m\"ussen. F\"ur das \textit{Graphlet} $g_1$ sind alle Worte \"aquivalent zueinander, die zyklische Vertauschungen voneinander sind. F\"ur das \textit{Graphlet} $g_2$ sind Worte \"aquivalent zueinander, die Spiegelungen voneinander sind (siehe Abbildung \ref{fig:3graphlets}).
+Die Berechnung aller \"aquivalenten \textit{Graphlet}-Worte der L\"ange 3 ist komplizierter, da sie f\"ur zwei verschiedene \textit{Graphlets} berechnet werden m\"ussen. F\"ur das \textit{Graphlet} $g_1$ sind alle Worte \"aquivalent zueinander, die zyklische Vertauschungen voneinander sind. F\"ur das \textit{Graphlet} $g_2$ sind Worte \"aquivalent zueinander, die Spiegelungen voneinander sind (siehe Abbildung \ref{fig:3graphlets}). \\
 
 
 
@@ -320,7 +327,7 @@ Dies steht im Gegensatz zur RGF, die - analog zu einer Vektornorm - die Abst\"an
 \section{Datens\"atze}
 
 
-\subsection{Fallstudien}
+\subsection{Fallstudien - Datensatz 1}
 
 Anfangs wurden 20 verschiedene Proteine aus verschiedenen CATH-Klassen zum Vergleich ausgew\"ahlt. Die Proteine wurden so gew\"ahlt, dass die drei CATH-klassen mit vielen Sekund\"arstrukturelementen \textit{mainly-alpha}, \textit{mainly-beta} und \textit{alpha-beta} vertreten sind. Weiterhin wurde die Auswahl so getroffen, dass es f\"ur jede Stufe der Hierarchie mindestens zwei Proteine gibt, die auf der entsprechenden Stufe in die gleiche Klasse eingeordnet werden. Die Proteine werden im folgenden kurz beschreiben.
 
@@ -384,7 +391,7 @@ PDB-ID & CATH-Code  \\
 \end{tabular}
 
 
-\subsection{Datensatz 1} 
+\subsection{Fallstudien  - Datensatz 2} 
 
 F\"ur die ersten Tests wurden verschiedene Proteine entsprechend ihrer CATH-Klassifizeirugn zusammengestellt. Die Proteine wurden so gew\"ahlt, dass die 3 CATH-Klassen gleich stark vertreten sind, in denen sich viele Sekund\"arstrukturelemente befinden. Dementsprechend wurden Proteine aus der CATH-Klasse 4 ignoriert. Diese Klasse enth\"alt nur Proteine mit wenigen Sekund\"arstrukturelementen.
 
@@ -393,26 +400,29 @@ Weiterhin wurde je ein Vertreter der selben Topologie aus einer anderen Superfam
  
 Da die \textit{Graphlet}-Vektoren globale Eigenschaften eines Graphen beschreiben, wurde bei diesem Datensatz darauf geachtet, dass alle Strukturen aus genau einer Polypeptidkette mit genau einer Dom\"ane bestehen.
 
+Diese Herangehensweise folgt aus der Vermutung, dass einzelne Dom\"anen charakteristische \textit{Graphlet}-Vektoren haben. 
+\\
 
-\begin{tabular}{c c c}
+\begin{tabular}{ | c || c | c |}
 
-PDB-ID & CATH        & Klassifizierung         \\
-1qpu   & 1.20.120.10 & Elektronentransport     \\
-1qq3   & 1.20.120.10 & Elektronentransport     \\
-1cgn   & 1.20.120.10 & Elektronentransport     \\
-1he9   & 1.20.120.260& Toxin (Exoenzym)        \\
-3gf9   & 1.20.900.10 & Endocytose              \\
-1exs   & 2.40.128.20 & Lipid bindendes Protein \\
-1ngl   & 2.40.128.20 & Transport Protein       \\
-1qqs   & 2.40.128.20 & Zucker bindendes Protein\\
-3slo   & 2.40.128.130& Protein Transport       \\
-1wjx   & 2.40.280.10 & RNA-bindendes Protein   \\
-5chy   & 3.40.50.2300& Signaltransduktion      \\
-2id9   & 3.40.50.2300& Signal Protein          \\
-3i42   & 3.40.50.2300& unbekannte Funktion     \\
-1d4o   & 3.40.50.1220& Oxidoreductase          \\
-2w0i   & 3.40.20.10  & Transferase             \\
-
+\hline
+PDB-ID & CATH-ID        & Klassifizierung      \\ \hline
+1qpu   & 1.20.120.10 & Elektronentransport     \\ \hline
+1qq3   & 1.20.120.10 & Elektronentransport     \\ \hline
+1cgn   & 1.20.120.10 & Elektronentransport     \\ \hline
+1he9   & 1.20.120.260& Toxin (Exoenzym)        \\ \hline
+3gf9   & 1.20.900.10 & Endocytose              \\ \hline
+1exs   & 2.40.128.20 & Lipid bindendes Protein \\ \hline
+1ngl   & 2.40.128.20 & Transport Protein       \\ \hline
+1qqs   & 2.40.128.20 & Zucker bindendes Protein\\ \hline
+3slo   & 2.40.128.130& Protein Transport       \\ \hline
+1wjx   & 2.40.280.10 & RNA-bindendes Protein   \\ \hline
+5chy   & 3.40.50.2300& Signaltransduktion      \\ \hline
+2id9   & 3.40.50.2300& Signal Protein          \\ \hline
+3i42   & 3.40.50.2300& unbekannte Funktion     \\ \hline
+1d4o   & 3.40.50.1220& Oxidoreductase          \\ \hline
+2w0i   & 3.40.20.10  & Transferase             \\ 
+\hline
 \end{tabular}
 
 
@@ -434,6 +444,9 @@ PDB-ID & Chain & CATH-Code   & EC-Code  \\
 1YWK   & ????  & nicht da    & 5.3.1.17
 
 \end{tabular}
+
+
+\subsection{Fallstudien - Datensatz 3}
 
 
 
@@ -465,7 +478,9 @@ Die paarweisen Tanimoto-Koeffizienten der Proteingraphen zeigen - wie schon bei 
 
 F\"ur die KOmplexgraphen zeigt die Tabelle wieder eine hohe \"Ahnlichkeite unter den ersten 3 Proteinen 1QPU, 1QQ3 und 1CGN. Auch innerhalb der Klasse \textit{alpha-beta} sind 3 Proteine mit der h\"ochsten paarweisen \"Ahnlichkeit bewertet worden. Die geringe Anzahl von stark bewerteten \"Ahnlichkeiten innerhalb der \textit{mainly-beta}-Klasse ist sehr auff\"allig. 1QQS und 3SLO sind das einzige Paar mit \textit{beta}-Topologie, dessen \"Ahnlichkeit als gro"s bewertet wurde.
 
+\section{Fallstudien - Datensatz 2}
 
+\section{Fallstudien - Datensatz 3}
 
 
 \chapter{Diskussion und Ausblick}
@@ -478,6 +493,8 @@ F\"ur die KOmplexgraphen zeigt die Tabelle wieder eine hohe \"Ahnlichkeite unter
 
 \subsection{Datensatz 2}
 
+\subsection{Datensatz 3}
+
 \section{Ausblick}
 
 \subsection{Verbesserung des Scoring}
@@ -487,6 +504,8 @@ F\"ur die KOmplexgraphen zeigt die Tabelle wieder eine hohe \"Ahnlichkeite unter
 \subsection{\"Ahnlichkeitssuche}
 
 \subsection{\textit{Graphlets} im Faltungsraum}
+
+\subsection{\textit{Graphlet}-Motive}
 
 
 
@@ -584,6 +603,8 @@ PDB-ID & \cellcolor{fGreen!100}2utg & 1vib & 1qpu & 1qq3 & 2xl6 & 2yl1 & 1rxq & 
 \newpage
 
 
+
+
 \begin{table}
 \label{table:occ-aag-rgf}
 \scalebox{0.8}{
@@ -609,7 +630,7 @@ PDB-ID & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5
 
 
 \end{tabular}}
-\caption{Distanzen der Aminos\"auregraphen, gemessen mit RGF}
+\caption{Distanzen der Aminos\"auregraphen, gemessen mit RGF. In den Zellen der Tabelle stehen die RGF-Distanzen f\"ur die entsprechenden PDB-Dateien. F\"ur jede Zeile (jedes Protein) sind die 4 niedrigsten Distanzen gr\"un unterlegt. Je dunkler das gr\"un ist, desto k\"urzer ist die Distanz}
 \end{table}
 
 
@@ -639,7 +660,7 @@ PDB-ID & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5
 
 
 \end{tabular}}
-\caption{Distanzen der Proteingraphen, gemessen mit RGF}
+\caption{Distanzen der Proteingraphen, gemessen mit RGF. In den Zellen der Tabelle stehen die RGF-Distanzen f\"ur die entsprechenden PDB-Dateien. F\"ur jede Zeile (jedes Protein) sind die 4 niedrigsten Distanzen gr\"un unterlegt. Je dunkler das gr\"un ist, desto k\"urzer ist die Distanz}
 \end{table}
 
 
@@ -668,8 +689,9 @@ PDB-ID & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5
 
 
 \end{tabular}}
-\caption{Distanzen der Komplexgraphen, gemessen mit RGF}
+\caption{Distanzen der Komplexgraphen, gemessen mit RGF. In den Zellen der Tabelle stehen die RGF-Distanzen f\"ur die entsprechenden PDB-Dateien. F\"ur jede Zeile (jedes Protein) sind die 4 niedrigsten Distanzen gr\"un unterlegt. Je dunkler das gr\"un ist, desto k\"urzer ist die Distanz}
 \end{table}
+
 
 
 \newpage
@@ -698,7 +720,7 @@ PDB-ID & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5
 
 
 \end{tabular}}
-\caption{Tanimoto-Koeffizienten der Aminos\"auregraphen}
+\caption{Jaccard-Indizes der Aminos\"auregraphen. In den Zellen der Tabelle stehen die Jaccard-Indizes f\"ur die entsprechenden PDB-Dateien. F\"ur jede Zeile (jedes Protein) sind die 4 gr\"o"sten Indizes gr\"un unterlegt. Je dunkler das gr\"un ist, desto gr\"o"ser der Index}
 \end{table}
 
 \begin{table}
@@ -724,7 +746,7 @@ PDB-ID & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5
 2w0i & 0.395 & \cellcolor{fGreen!50}0.5 & 0.463 & \cellcolor{fGreen!75}0.538 & 0.333 & \cellcolor{fGreen!100}0.621 & 0.395 & 0.395 & 0.463 & 0.395 & 0.395 & 0.463 & 0.463 & \cellcolor{fGreen!25}0.5 &   X   &  \\
 
 \end{tabular}}
-\caption{Tanimoto-Koeffizienten der Proteingraphen}
+\caption{Jaccard-Indizes der Proteingraphen. In den Zellen der Tabelle stehen die Jaccard-Indizes f\"ur die entsprechenden PDB-Dateien. F\"ur jede Zeile (jedes Protein) sind die 4 gr\"o"sten Indizes gr\"un unterlegt. Je dunkler das gr\"un ist, desto gr\"o"ser der Index}
 \end{table}
 
 
@@ -751,7 +773,7 @@ PDB-ID & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5
 2w0i & 0.276 & 0.428 & 0.363 & \cellcolor{fGreen!75}0.538 & 0.224 & \cellcolor{fGreen!100}0.621 & 0.395 & 0.2 & 0.153 & 0.395 & 0.395 & \cellcolor{fGreen!25}0.463 & \cellcolor{fGreen!50}0.463 & 0.333 &   X   &  \\
 
 \end{tabular}}
-\caption{Tanimoto-Koeffizienten der Komplexgraphen}
+\caption{Jaccard-Indizes der Komplexgraphen. In den Zellen der Tabelle stehen die Jaccard-Indizes f\"ur die entsprechenden PDB-Dateien. F\"ur jede Zeile (jedes Protein) sind die 4 gr\"o"sten Indizes gr\"un unterlegt. Je dunkler das gr\"un ist, desto gr\"o"ser der Index}
 \end{table}
 
 
